Progress at Services section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="/icons/css/all.min.css" />
         <link rel="stylesheet" href="/css/style.css" />
         <title>Document</title>
     </head>
@@ -27,7 +28,7 @@
                     <img src="/img/education.jpg" alt="" />
                 </div>
                 <div class="content px-5">
-                    <h1>Education</h1>
+                    <h1 class="font-weight-bold">Education</h1>
                     <p>
                         Engage and increase the conversion of New Students through the live chat,
                         who want to enroll in your programs.
@@ -38,5 +39,152 @@
                 </div>
             </div>
         </div>
+        <main>
+            <section id="about">
+                <img src="./img/about.jpg" alt="" class="bg" />
+                <div class="text-center content">
+                    <h1 class="mb-4 font-weight-bold">
+                        About <br />
+                        Chatcloud
+                    </h1>
+                    <p class="m-auto">
+                        ChatCloud is a Lead generation agency that is dedicated to serving you with
+                        the best qualified leads using their live chat software and live human
+                        customer support on your website and social media 24/7/365. Capture leads
+                        from your potential customers even on holidays and after business hours!
+                    </p>
+                </div>
+            </section>
+            <section id="start">
+                <div class="text-center content">
+                    <h1 class="mb-4 font-weight-bold">Getting Started!</h1>
+                    <p class="ml-auto mr-auto mb-4">
+                        Give us a call or send an email. After understanding your needs we will
+                        assign you an Accounts Manager who is going to provide you with our plugin.
+                    </p>
+                    <button class="slide px-3 py-2 text-uppercase rounded">
+                        <span class="text">talk to us now</span>
+                    </button>
+                </div>
+            </section>
+            <div id="sevices">
+                <div class="header text-center text-uppercase"><h1>our services</h1></div>
+                <div class="grid p-5 d-flex flex-wrap justify-content-between">
+                    <div class="grid_item">
+                        <div class="icon"><span class="fa fa-globe"></span></div>
+                        <div class="content">
+                            <div>
+                                <h3>Live Chat Web</h3>
+                                <p>
+                                    24/7 Live Chat feature for your website to generate leads from
+                                    the traffic.
+                                </p>
+                            </div>
+                            <div class="cta">
+                                <button>
+                                    <a href="/"
+                                        >Find out more <span class="fa fa-arrow-right"></span
+                                    ></a>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="grid_item">
+                        <div class="icon"><span class="fab fa-facebook-messenger"></span></div>
+                        <div class="content">
+                            <div>
+                                <h3>Facebook & Instagram Integration</h3>
+                                <p>
+                                    Your customers can connect with our live chat representatives
+                                    via Facebook & Instagram messenger.
+                                </p>
+                            </div>
+                            <div class="cta">
+                                <button>
+                                    <a href="/"
+                                        >Find out more <span class="fa fa-arrow-right"></span
+                                    ></a>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="grid_item">
+                        <div class="icon"><span class="fa fa-phone-volume"></span></div>
+                        <div class="content">
+                            <div>
+                                <h3>Call Connect Feature</h3>
+                                <p>Instant phone call transfers during your selected hours.</p>
+                            </div>
+                            <div class="cta">
+                                <button>
+                                    <a href="/"
+                                        >Find out more <span class="fa fa-arrow-right"></span
+                                    ></a>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="grid px-5 p-3 d-flex flex-wrap justify-content-between">
+                    <div class="grid_item">
+                        <div class="icon"><span class="fa fa-sms"></span></div>
+                        <div class="content">
+                            <div>
+                                <h3>Text Message & WhatsApp Integration</h3>
+                                <p>
+                                    A Text to Chat feature to communicate with your customers via
+                                    Text messages and WhatsApp messages.
+                                </p>
+                            </div>
+                            <div class="cta">
+                                <button>
+                                    <a href="/"
+                                        >Find out more <span class="fa fa-arrow-right"></span
+                                    ></a>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="grid_item">
+                        <div class="icon"><span class="fa fa-edit"></span></div>
+                        <div class="content">
+                            <div>
+                                <h3>Customized Questions & Responses</h3>
+                                <p>
+                                    24/7 Live Chat feature for your website to generate leads from
+                                    the traffic.
+                                </p>
+                            </div>
+                            <div class="cta">
+                                <button>
+                                    <a href="/"
+                                        >Find out more <span class="fa fa-arrow-right"></span
+                                    ></a>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="grid_item">
+                        <div class="icon"><span class="fa fa-file-invoice-dollar"></span></div>
+                        <div class="content">
+                            <div>
+                                <h3>No Obligation Free Trial</h3>
+                                <p>
+                                    24/7 Live Chat feature for your website to generate leads from
+                                    the traffic.
+                                </p>
+                            </div>
+                            <div class="cta">
+                                <button>
+                                    <a href="/"
+                                        >Find out more <span class="fa fa-arrow-right"></span
+                                    ></a>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
     </body>
 </html>
