Progess at contact page

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </section>
             <div id="sevices">
                 <div class="header text-center text-uppercase"><h1>our services</h1></div>
-                <div class="grid p-5 d-flex flex-wrap justify-content-between">
+                <div class="grid p-5">
                     <div class="grid_item">
                         <div class="icon"><span class="fa fa-globe"></span></div>
                         <div class="content">
@@ -124,8 +124,6 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="grid px-5 p-3 d-flex flex-wrap justify-content-between">
                     <div class="grid_item">
                         <div class="icon"><span class="fa fa-sms"></span></div>
                         <div class="content">
@@ -185,6 +183,48 @@
                     </div>
                 </div>
             </div>
+            <section id="posts">
+                <h1 class="text-center text-uppercase font-weight-bold">latest posts</h1>
+                <div class="grid">
+                    <div>
+                        <img src="/img/posts/4.jpg" alt="" />
+                        <img src="/img/posts/5.jpg" alt="" />
+                        <img src="/img/posts/1.jpg" alt="" />
+                    </div>
+                    <div style="margin-top: 200px">
+                        <img src="/img/posts/3.jpg" alt="" />
+                        <img src="/img/posts/2.jpg" alt="" />
+                    </div>
+                </div>
+            </section>
+            <section id="contact">
+                <div class="row h-100">
+                    <div class="col-md-6 info">
+                        <h1 class="mb-3">Contact Us</h1>
+                        <p>Our Sales & Support team is available 24/7 to assist you.</p>
+                        <ul class="list-unstyled">
+                            <li>
+                                <span class="fa fa-globe"></span>
+                                <p>Jamestown, North Dakota</p>
+                            </li>
+                            <li>
+                                <span class="fa fa-phone"></span>
+                                <p>+1 (701) 638-1622</p>
+                            </li>
+                            <li>
+                                <span class="fa fa-envelope"></span>
+                                <p>info@chatcloud.co</p>
+                            </li>
+                        </ul>
+                        <div class="social_links">
+                            <span class="fab fa-facebook-f"></span>
+                            <span class="fab fa-twitter"></span>
+                            <span class="fab fa-facebook-messenger"></span>
+                        </div>
+                    </div>
+                    <div class="col-md-6 form">hello</div>
+                </div>
+            </section>
         </main>
     </body>
 </html>
