--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">    
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">    <link rel="stylesheet" href="css/bootstrap.min.css" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+            rel="stylesheet"
+        />
+        <link rel="preconnect" href="https://fonts.gstatic.com" />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+            rel="stylesheet"
+        />
+        <link rel="stylesheet" href="css/bootstrap.min.css" />
         <link rel="stylesheet" href="icons/boxicons/css/boxicons.min.css" />
         <link rel="stylesheet" href="icons/css/all.min.css" />
         <link rel="stylesheet" href="css/style.css" />
@@ -95,13 +102,13 @@
                     <button class="next" onclick="plusSlides(1)">
                         <span class="fa fa-caret-right"></span>
                     </button>
-                    <input type="radio" name="slider" id="s1" class="input"/>
-                    <input type="radio" name="slider" id="s2" class="input"/>
-                    <input type="radio" name="slider" id="s3" class="input"/>
-                    <input type="radio" name="slider" id="s4" class="input"/>
-                    <input type="radio" name="slider" id="s5" class="input"/>
-                    <input type="radio" name="slider" id="s6" class="input"/>
-                    <input type="radio" name="slider" id="s7" class="input"/>
+                    <input type="radio" name="slider" id="s1" class="input" />
+                    <input type="radio" name="slider" id="s2" class="input" />
+                    <input type="radio" name="slider" id="s3" class="input" />
+                    <input type="radio" name="slider" id="s4" class="input" />
+                    <input type="radio" name="slider" id="s5" class="input" />
+                    <input type="radio" name="slider" id="s6" class="input" />
+                    <input type="radio" name="slider" id="s7" class="input" />
                     <input type="radio" name="slider" id="s8" class="input" checked />
 
                     <label for="s1" id="slide1"><img src="img/industries/1.jpg" alt="" /></label>
@@ -120,7 +127,7 @@
                     <div class="s5 labels"><h1>Education</h1></div>
                     <div class="s6 labels"><h1>E-commerce</h1></div>
                     <div class="s7 labels"><h1>Auto Dealer</h1></div>
-                    <div class="s8 labels"><h1>Real Estate</h></div>
+                    <div class="s8 labels"><h1>Real Estate</h1></div>
                 </div>
             </div>
         </section>
@@ -255,7 +262,7 @@
             </div>
         </section>
         <section id="contact">
-            <div class="row">
+            <div class="rows">
                 <div class="col-md-6 info">
                     <div class="wrapper">
                         <h1 class="mb-3">Contact Us</h1>
@@ -329,7 +336,7 @@
         <section id="footer">
             <span>2020 CHATCLOUD</span>
         </section>
-        <script src="js/jquery-3.4.1.min.js"></script>
+
         <script src="js/gsap/gsap.min.js"></script>
         <script src="js/main.js"></script>
     </body>
