--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
         />
         <link rel="stylesheet" href="css/bootstrap.min.css" />
         <link rel="stylesheet" href="icons/boxicons/css/boxicons.min.css" />
+        <link rel="stylesheet" href="css/venobox.min.css" />
         <link rel="stylesheet" href="icons/css/all.min.css" />
         <link rel="stylesheet" href="css/style.css" />
-        <title>Document</title>
+        <title>Chatcloud - We Chat For You.</title>
     </head>
     <body>
         <div id="hero" class="container-fluid px-5">
@@ -34,26 +35,69 @@
                 <nav class="d-flex align-items-center">
                     <ul class="navlinks pop list-unstyled d-flex align-items-center m-0">
                         <li class="navlinkItem"><a href="/" class="active">Home</a></li>
-                        <li class="navlinkItem"><a href="/services">Services</a></li>
-                        <li class="navlinkItem"><a href="/industries">Industries</a></li>
+                        <li class="navlinkItem"><a href="/pages/services.html">Services</a></li>
+                        <li class="navlinkItem link-drop">
+                            <a href="/pages/industries.html">Industries</a>
+                            <div class="dropdown">
+                                <ul class="list-unstyled">
+                                    <li>
+                                        <a
+                                            href="/pages/industries/autoDealership.html"
+                                            class="list-group-item"
+                                            >Auto DealerShip</a
+                                        >
+                                    </li>
+                                    <li><a href="" class="list-group-item">E-commerce</a></li>
+                                    <li><a href="" class="list-group-item">Education</a></li>
+                                    <li><a href="" class="list-group-item">Event Management</a></li>
+                                    <li><a href="" class="list-group-item">Health Care</a></li>
+                                    <li><a href="" class="list-group-item">Home Improvement</a></li>
+                                    <li><a href="" class="list-group-item">Law Firms</a></li>
+                                    <li><a href="" class="list-group-item">Real Estate</a></li>
+                                </ul>
+                            </div>
+                        </li>
                         <li class="navlinkItem"><a href="/pricing">Pricing</a></li>
-                        <li class="navlinkItem"><a href="/contact">Contact Us</a></li>
+                        <li class="navlinkItem"><a href="/pages/contact.html">Contact Us</a></li>
                     </ul>
                 </nav>
             </header>
-            <div class="hero_slider d-flex align-items-center justify-content-start">
-                <div class="background">
-                    <img src="img/education.jpg" alt="" />
-                </div>
-                <div class="content px-5">
-                    <h1 class="font-weight-bold">Education</h1>
-                    <p>
-                        Engage and increase the conversion of New Students through the live chat,
-                        who want to enroll in your programs.
-                    </p>
-                    <button class="slide px-3 py-2 text-uppercase rounded">
-                        <span class="text">talk to us now</span>
-                    </button>
+            <div class="hero_slider">
+                <div class="hero-slider-wrapper">
+                    <div
+                        class="hero-slider-item d-flex align-items-center justify-content-start h-100 w-100 active"
+                    >
+                        <div class="background">
+                            <img src="img/education.jpg" alt="" />
+                        </div>
+                        <div class="content px-5">
+                            <h1 class="font-weight-bold">Education</h1>
+                            <p>
+                                Engage and increase the conversion of New Students through the live
+                                chat, who want to enroll in your programs.
+                            </p>
+                            <button class="slide px-3 py-2 text-uppercase rounded">
+                                <span class="text">talk to us now</span>
+                            </button>
+                        </div>
+                    </div>
+                    <div
+                        class="hero-slider-item d-flex align-items-center justify-content-start h-100 w-100"
+                    >
+                        <div class="background">
+                            <img src="img/education.jpg" alt="" />
+                        </div>
+                        <div class="content px-5">
+                            <h1 class="font-weight-bold">Education</h1>
+                            <p>
+                                Engage and increase the conversion of New Students through the live
+                                chat, who want to enroll in your programs.
+                            </p>
+                            <button class="slide px-3 py-2 text-uppercase rounded">
+                                <span class="text">talk to us now</span>
+                            </button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -80,7 +124,7 @@
                     you an Accounts Manager who is going to provide you with our plugin.
                 </p>
                 <button class="slide px-3 py-2 text-uppercase rounded">
-                    <span class="text">talk to us now</span>
+                    <span class="text">contact us</span>
                 </button>
             </div>
         </section>
@@ -111,17 +155,73 @@
                     <input type="radio" name="slider" id="s7" class="input" />
                     <input type="radio" name="slider" id="s8" class="input" checked />
 
-                    <label for="s1" id="slide1"><img src="img/industries/1.jpg" alt="" /></label>
-                    <label for="s2" id="slide2"><img src="img/industries/2.jpg" alt="" /></label>
-                    <label for="s3" id="slide3"><img src="img/industries/3.jpg" alt="" /></label>
-                    <label for="s4" id="slide4"><img src="img/industries/4.jpg" alt="" /></label>
-                    <label for="s5" id="slide5"><img src="img/industries/5.jpg" alt="" /></label>
-                    <label for="s6" id="slide6"><img src="img/industries/6.jpg" alt="" /></label>
-                    <label for="s7" id="slide7"><img src="img/industries/7.jpg" alt="" /></label>
-                    <label for="s8" id="slide8"><img src="img/industries/8.jpg" alt="" /></label>
+                    <label for="s1" id="slide1"
+                        ><a
+                            class="venobox"
+                            href="img/industries/1.jpg"
+                            data-title="Legal"
+                            data-gall="industries"
+                            ><img src="img/industries/1.jpg" alt="" /></a
+                    ></label>
+                    <label for="s2" id="slide2"
+                        ><a
+                            class="venobox"
+                            href="img/industries/2.jpg"
+                            data-title="Home Improvements"
+                            data-gall="industries"
+                            ><img src="img/industries/2.jpg" alt="" /></a
+                    ></label>
+                    <label for="s3" id="slide3"
+                        ><a
+                            class="venobox"
+                            href="img/industries/3.jpg"
+                            data-title="Health Care"
+                            data-gall="industries"
+                            ><img src="img/industries/3.jpg" alt="" /></a
+                    ></label>
+                    <label for="s4" id="slide4"
+                        ><a
+                            class="venobox"
+                            href="img/industries/4.jpg"
+                            data-title="Event Planner"
+                            data-gall="industries"
+                            ><img src="img/industries/4.jpg" alt="" /></a
+                    ></label>
+                    <label for="s5" id="slide5"
+                        ><a
+                            class="venobox"
+                            href="img/industries/5.jpg"
+                            data-title="Education"
+                            data-gall="industries"
+                            ><img src="img/industries/5.jpg" alt="" /></a
+                    ></label>
+                    <label for="s6" id="slide6"
+                        ><a
+                            class="venobox"
+                            href="img/industries/6.jpg"
+                            data-title="E-commerce"
+                            data-gall="industries"
+                            ><img src="img/industries/6.jpg" alt="" /></a
+                    ></label>
+                    <label for="s7" id="slide7"
+                        ><a
+                            class="venobox"
+                            href="img/industries/7.jpg"
+                            data-title="Auto Dealer"
+                            data-gall="industries"
+                            ><img src="img/industries/7.jpg" alt="" /></a
+                    ></label>
+                    <label for="s8" id="slide8"
+                        ><a
+                            class="venobox"
+                            href="img/industries/8.jpg"
+                            data-title="Real Estate"
+                            data-gall="industries"
+                            ><img src="img/industries/8.jpg" alt="" /></a
+                    ></label>
 
                     <div class="s1 labels"><h1>Legal</h1></div>
-                    <div class="s2 labels"><h1>Home Improvement</h1></div>
+                    <div class="s2 labels"><h1>Home Improvements</h1></div>
                     <div class="s3 labels"><h1>Health Care</h1></div>
                     <div class="s4 labels"><h1>Event Planner</h1></div>
                     <div class="s5 labels"><h1>Education</h1></div>
@@ -251,13 +351,34 @@
             <h1 class="text-center text-uppercase font-weight-bold">latest posts</h1>
             <div class="grid">
                 <div>
-                    <img src="img/posts/4.jpg" alt="" />
-                    <img src="img/posts/5.jpg" alt="" />
-                    <img src="img/posts/1.jpg" alt="" />
+                    <a href="/pages/blogs/integration.html"
+                        ><img src="img/posts/4.jpg" alt="" />
+                        <div class="back"><p>How Does it Work?</p></div></a
+                    >
                 </div>
-                <div class="offset">
-                    <img src="img/posts/3.jpg" alt="" />
-                    <img src="img/posts/2.jpg" alt="" />
+                <div>
+                    <a href=""
+                        ><img src="img/posts/5.jpg" alt="" />
+                        <div class="back"><p>White-Labels for Marketing Agencies</p></div></a
+                    >
+                </div>
+                <div>
+                    <a href=""
+                        ><img src="img/posts/1.jpg" alt="" />
+                        <div class="back"><p>Privacy Policy & Data Protection</p></div></a
+                    >
+                </div>
+                <div>
+                    <a href=""
+                        ><img src="img/posts/3.jpg" alt="" />
+                        <div class="back"><p>Pricing</p></div></a
+                    >
+                </div>
+                <div>
+                    <a href=""
+                        ><img src="img/posts/2.jpg" alt="" />
+                        <div class="back"><p>Human vs. Chat-Bot</p></div></a
+                    >
                 </div>
             </div>
         </section>
@@ -338,6 +459,9 @@
         </section>
 
         <script src="js/gsap/gsap.min.js"></script>
+        <script src="js/jquery-3.4.1.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+        <script src="js/venobox.min.js"></script>
         <script src="js/main.js"></script>
     </body>
 </html>
