Major Ui chnages

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <li class="navlinkItem"><a href="/" class="active">Home</a></li>
                         <li class="navlinkItem"><a href="/pages/services.html">Services</a></li>
                         <li class="navlinkItem link-drop">
-                            <a href="/pages/industries.html">Industries</a>
+                            <a href="/pages/industries.html" id="ind_dropList">Industries</a>
                             <div class="dropdown">
                                 <ul class="list-unstyled">
                                     <li>
@@ -565,10 +565,11 @@
         <section id="footer">
             <span>2020 CHATCLOUD</span>
         </section>
-
+        <a href="#" class="back-to-top"><i class="bx bx-up-arrow-alt"></i></a>
         <script src="js/gsap/gsap.min.js"></script>
         <script src="js/jquery-3.4.1.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
+        <script src="js/jquery.easing.min.js"></script>
         <script src="js/venobox.min.js"></script>
         <script src="js/swiper.min.js"></script>
         <script src="js/main.js"></script>
