--- a/pages/industries/LawFirms.html
+++ b/pages/industries/LawFirms.html
@@ -109,7 +109,11 @@
         <main>
             <div class="grid p-0 my-5 h-100">
                 <div class="row h-100">
-                    <img src="../../img/industries_Singles/Law-Firm.jpg" alt="" />
+                    <img
+                        src="../../img/industries_Singles/Law-Firm.jpg"
+                        alt=""
+                        style="object-position: 80% 50%"
+                    />
                 </div>
                 <div class="content mb-5">
                     <div class="subheader font-weight-bolder">Chat Cloud - Law Firms</div>
@@ -156,7 +160,7 @@
                 </button>
             </div>
         </section>
-        <section id="footer">
+        <section id="footer" class="mt-0">
             <span>2020 CHATCLOUD</span>
         </section>
         <script src="../../js/gsap/gsap.min.js"></script>
