--- a/pages/industries/RealEstate.html
+++ b/pages/industries/RealEstate.html
@@ -162,7 +162,7 @@
                 </button>
             </div>
         </section>
-        <section id="footer">
+        <section id="footer" class="mt-0">
             <span>2020 CHATCLOUD</span>
         </section>
         <script src="../../js/gsap/gsap.min.js"></script>
