--- a/pages/industries/education.html
+++ b/pages/industries/education.html
@@ -111,7 +111,11 @@
         <main>
             <div class="grid p-0 my-5 h-100">
                 <div class="row h-100">
-                    <img src="../../img/industries_Singles/Education.jpg" alt="" />
+                    <img
+                        src="../../img/industries_Singles/Education.jpg"
+                        alt=""
+                        style="object-position: 30% 50%"
+                    />
                 </div>
                 <div class="content mb-5">
                     <div class="subheader font-weight-bolder">Chat Cloud - Education</div>
@@ -163,7 +167,7 @@
                 </button>
             </div>
         </section>
-        <section id="footer">
+        <section id="footer" class="mt-0">
             <span>2020 CHATCLOUD</span>
         </section>
         <script src="../../js/gsap/gsap.min.js"></script>
